# Small-CSharp-Projects

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  README.md  build-all.cmd
B64/: Cargo.toml  build-b64.cmd
B64/src/: main.rs
Base64Decode/: Cargo.toml  build-b64d.cmd
Base64Decode/src/: main.rs
ConverScreenshot/: ConverScreenshot.sln  Directory.Packages.props  Version.targets
ConverScreenshot/GUI/: GUI.csproj
ConverScreenshot/Launcher/: Launcher.csproj
ConverScreenshot/Launcher/Libraries/: ArgumentParser.cs  Dependency.cs
ConverScreenshot/Option/: Option.csproj
ConverScreenshot/Option/Enums/: Game.cs  Operation.cs
ConvertWebP/: ConvertWebP.csproj  ConvertWebP.sln  Program.cs  README.md
ConvertWebP/DarkModeForms/: DarkModeCS.cs  FlatComboBox.cs  FlatTabControl.cs  Messenger.cs
ConvertWebP/Forms/: ProgressForm.Designer.cs  ProgressForm.cs  ProgressForm.resx
ConvertWebP/Libraries/: ArgumentParser.cs  Dialogs.cs  FilePath.cs  NaturalSort.cs  Options.cs  RunPrograms.cs
ConvertWebP/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.ko-KR.resx  Resources.resx  Settings.Designer.cs
CustomJumpList/: Cargo.toml  CustomJumpList.csproj  CustomJumpList.sln  Directory.Packages.props  Program.cs  build-cjl.cmd  build.rs
CustomJumpList/Properties/: AssemblyInfo.cs
CustomJumpList/src/: main.rs
FindInFiles/: FindInFiles.csproj  FindInFiles.sln  Program.cs  README.md
FindInFiles/Forms/: MainForm.Designer.cs  MainForm.cs
FindInFiles/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
ImageConverter/: Directory.Packages.props  ImageConverter.csproj  ImageConverter.sln  Program.cs
ImageConverter/Libraries/: Dirs.cs  External.cs  GameDefinition.cs  Helper.cs  Options.cs  Res.cs  Runner.cs
ImageConverter/Properties/: AssemblyInfo.cs  Resources.Designer.cs
Lowercase/: Cargo.toml  Lowercase.csproj  Lowercase.sln  Program.cs  build-lowercase.cmd  build.cmd  build.rs
Lowercase/Properties/: AssemblyInfo.cs
Lowercase/src/: main.rs
Pathed/: Directory.Packages.props  PATHED.csproj  PATHED.sln  Program.cs  packages.config
Pathed/Libraries/: EnvPath.cs  MyConsole.cs  Options.cs  Runner.cs
Pathed/Properties/: AssemblyInfo.cs
RemoveEmptyDirectories/: Cargo.toml  CodeMaid.config  Program.cs  RemoveEmptyDirectories.csproj  RemoveEmptyDirectories.sln  build-red.cmd  build.rs
RemoveEmptyDirectories/Properties/: AssemblyInfo.cs
RemoveEmptyDirectories/src/: main.rs
Renumber/: Directory.Packages.props  FodyWeavers.xml  Program.cs  Renumber.csproj  Renumber.sln
Renumber/Properties/: AssemblyInfo.cs
SaveRestore/: .gitignore  Program.cs  SaveRestore.csproj  SaveRestore.sln
SaveRestore/Properties/: AssemblyInfo.cs
SortPATH/: .editorconfig  Program.cs  README.md  SortPATH.csproj  SortPATH.sln
SortPATH/Properties/: AssemblyInfo.cs
rcalc/: Directory.Packages.props  ILMerge.props  ILMergeOrder.txt  Program.cs  packages.config  rcalc.csproj  rcalc.sln
rcalc/Forms/: Calculator.Designer.cs  Calculator.cs  CalculatorForm.Designer.cs  CalculatorForm.cs
rcalc/Properties/: AssemblyInfo.cs
