[package]
build = "build.rs"
edition = "2021"
name = "Lowercase"
version = "1.1.0"

[[bin]]
name = "lowercase"
path = "src/main.rs"

[dependencies]
console = { workspace = true }
path = { workspace = true }
argh = "0.1.12"

[target.'cfg(windows)'.build-dependencies]
tauri-winres = "0.1.1"

[package.metadata.tauri-winres]
FileDescription = "Convert uppercase characters in file/directory name to lowercase"
LegalCopyright = "Copyright (c) TetraTheta"
OriginalFilename = "lowercase.exe"
ProductName = "Lowercase"
